Prevent sharing button overlap

--- a/modules/theme-tools/compat/twentynineteen.css
+++ b/modules/theme-tools/compat/twentynineteen.css
@@ -116,10 +116,6 @@
 	margin-bottom: 0 !important;
 }
 
-.sd-social-official .sd-content ul {
-	margin-bottom: -0.625em !important;
-}
-
 .entry #sharing_email .sharing_send,
 .entry .sd-content ul li .option a.share-ustom,
 .entry .sd-content ul li a.sd-button,
